# CudaPlayground

./: CMakeLists.txt  README.md
include/: kernel_sim.hpp  utils.hpp
src/: kernel_sim.cpp
